--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,6 +42,14 @@ body {
   height: 6px;
   width: 10px;
 }
+/* globals.css */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
 
 .scrollbar-custom::-webkit-scrollbar-track {
   background: #f1f1f1;
